css/style.css
* {
	box-sizing: border-box;
}


body {
    margin:0;
    background: rgb(247, 243, 243);
}

/**************************************
Header and navigation styling
***************************************/

.wrapper {
    margin: 0 auto;
    max-width: 1100px;
    font-family: 'Ubuntu', sans-serif;
    padding-bottom: 20px;
    text-align: center;
  }

  .wrapper p {
      font-size: 1.2em;
  }

.name {
    font-weight: 900;
}


.site-nav {
   
    padding-left: 0;
}

.site-nav li {
    display: block;
    padding: 8px;
    font-size: 1.2em;
    font-weight: 700;
    background-color: #fff;
    margin: 10px 20px;
    
}

.site-nav a {
    display: block;
    text-transform: uppercase;
    text-decoration: none;
    color: #000;
    
}

.site-nav a:hover {
    color: #5bd4c6; 
}

/****************************
 Page Layout styling 
 *****************************/

img {
    max-width: 100%;
}

.container {
    margin: 0 auto;
    max-width: 1100px;
    font-family: 'Ubuntu', sans-serif;
    padding-bottom: 20px;
    text-align: center;
  }

.container p {
    
    font-size: 1.2em;
    margin-bottom: 25px;
        
}
.col h1, h2 {
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
}

.profile-img {
    padding: 5px;
    /* float: right; */
}
.col {
    float: left;
    margin: 15px 15px;
    max-width: 100%;
    text-align: center;
    letter-spacing: 1px;
    padding-top: 5px;
  }

  .col img {
    max-width: 100%;
    margin-top: 10px;
    margin-bottom: 10px;
}


  .clearfix::after {
    content: "";
    clear: both;
    display: table;
   }

  /********************************
  Footer navigation & styling 
  ***********************************/

  .footer-nav li {
    display: block;
    padding: 8px;
    font-size: 1.2em;
    font-weight: 700;
    background-color: #fff;
    margin: 10px 20px;
    
}

.footer-nav a {
    display: block;
    text-transform: uppercase;
    text-decoration: none;
    color: #000;
    
}

.footer-nav a:hover {
    color: #5bd4c6; 
}

/*******************************
Media width breakpoints  
********************************/

@media (min-width: 768px) {

    .site-nav li {
        display: inline-block;
        background: rgb(247, 243, 243);
    }
    

    header img {
        float: right;
    }

    header p {
        padding-top: 60px;
    }

    .col  {
        float: left;
        margin: 5px 0 5px 0;
        width: 50%;
        padding-right: 15px;
        padding-left: 15px;
        
        min-height: 400px;
       
    }

    .container div:nth-child(even) {
        content: "";
        clear: both;
        display: table;
    }
   
}

@media (min-width: 1024px) {


    /* .container {
        width: 100%;
    } */

    
    .col  {
        float: right;
        margin: 5px 0 5px 0;
        width: 33%;
        overflow: auto;
        /* padding-right: 15px;
        padding-left: 15px; */
        /* min-height: 400px; */
       
    }
    
}

